fix: update specification play against
